<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:fontFamily="@string/fontFamily__roboto_medium"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/empty_wallet_view1"
        android:layout_marginTop="147dp"
        android:text="@string/empty_wallet"
        android:textSize="20sp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/counter_text_bg"
        android:textAlignment="center"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:fontFamily="@string/fontFamily__roboto_medium"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/empty_wallet_view2"
        android:text="@string/empty_wallet_click"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textSize="22sp"
        android:textColor="@color/counter_text_color"
android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_below="@+id/empty_wallet_view1"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
