<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Onboarding.MainLogin"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >


    <TextView
        android:paddingBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:fontFamily="@string/fontFamily__roboto_medium"

        android:id="@+id/textView"
        android:textSize="30sp"
        android:textAlignment="center"
        android:singleLine="true"
        android:password="false"
        android:phoneNumber="false"
        android:inputType="text"
        android:layout_marginBottom="60dp"
        android:layout_above="@+id/textView8"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Store and sync your all expenses online  "
        android:id="@+id/textView7"
        android:layout_marginBottom="51dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Cloud Account"
        android:id="@+id/textView8"
        android:fontFamily="@string/fontFamily__roboto_regular"
        android:layout_above="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:id="@+id/linearLayout">


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:id="@+id/button2"
        android:typeface="sans"
        android:textColor="#ffffff"
        android:onClick="Click"
        android:focusable="false"
        android:fontFamily="@string/fontFamily__roboto_medium"

        android:background="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Borderless"

        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"

        android:id="@+id/button3"
        android:typeface="sans"
        android:textColor="@color/white"
        android:onClick="loginClick"
        android:fontFamily="@string/fontFamily__roboto_medium"

        android:background="@color/blue_grey"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

</RelativeLayout>
