<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Wallet.FillWallet">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/amount_wallet_fragment"
        android:textSize="16sp"
        android:maxLength="7"
        android:allowUndo="true"
        android:textAlignment="center"
        android:numeric="signed|decimal"
        android:layout_marginTop="63dp"
        android:drawableLeft="@drawable/ic_account_balance_wallet"
        android:drawablePadding="5dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:fontFamily="@string/fontFamily__roboto_light"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Enter income amount to fill wallet"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/amount_wallet_fragment"
        android:layout_alignEnd="@+id/amount_wallet_fragment" />

    <TextView
        android:fontFamily="@string/fontFamily__roboto_regular"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Fill Your Wallet"
        android:paddingBottom="10dp"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="42dp" />

    <Button
        android:fontFamily="@string/fontFamily__roboto_medium"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@color/primary_500"

        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD INCOME"
        android:textSize="15sp"
        android:id="@+id/fill_wallet_fragment"
        android:layout_below="@+id/amount_wallet_fragment"
        android:layout_marginTop="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.google.android.gms.ads.NativeExpressAdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-2328174728284271/7295888376"
        ads:adSize="320x150"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </com.google.android.gms.ads.NativeExpressAdView>

</RelativeLayout>
