<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rakesh.visualexpense.CircleMain">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
        android:id="@+id/TXT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0%"
        android:textSize="15dp"
            android:layout_marginRight="37dp"
            android:layout_marginEnd="37dp"
            android:layout_alignTop="@+id/textView12"
            android:layout_alignRight="@+id/progressBar"
            android:layout_alignEnd="@+id/progressBar"
            android:layout_marginTop="2dp" />

    <TextView
        android:fontFamily="@string/fontFamily__roboto_medium"
        android:id="@+id/totalview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1004444"
        android:padding="3dp"
        android:textSize="15dp"
        android:layout_alignTop="@+id/progressBar"
        android:layout_alignLeft="@+id/spendview"
        android:layout_alignStart="@+id/spendview" />


    <TextView
        android:fontFamily="@string/fontFamily__roboto_medium"
        android:id="@+id/spendview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="444444444"
        android:textSize="15dp"
        android:padding="3dp"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignTop="@+id/textView12" />


        <TextView
            android:fontFamily="@string/fontFamily__roboto_black"
            android:id="@+id/leftview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9866000"
            android:textSize="25dp"
            android:textColor="#009688"
            android:padding="5dp"
            android:layout_alignBaseline="@+id/textView10"
            android:layout_alignBottom="@+id/textView10"
            android:layout_toRightOf="@+id/textView10"
            android:layout_toEndOf="@+id/textView10" />

        <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
            android:background="@drawable/circle_shape"
        android:indeterminate="false"
        android:max="100"
        android:padding="3dp"
        android:progress="0"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/todayexpensetxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:fontFamily="@string/fontFamily__roboto_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Today Expenses"
        android:id="@+id/todayexpensetxt"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/leftview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <TextView
            android:fontFamily="@string/fontFamily__roboto_regular"
            android:textColor="#CCC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="There are no expenses today :)"
            android:id="@+id/no_expense"
            android:layout_marginTop="57dp"
            android:layout_below="@+id/todayexpensetxt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:fontFamily="@string/fontFamily__roboto_black"
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LEFT"
            android:textSize="25dp"
            android:padding="5dp"
            android:textColor="#CCC"
            android:layout_below="@+id/textView12"
            android:layout_alignRight="@+id/textView11"
            android:layout_alignEnd="@+id/textView11" />

        <TextView
            android:fontFamily="@string/fontFamily__roboto_medium"
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TOTAL"
            android:textColor="#CCC"
            android:padding="3dp"
            android:textSize="15dp"
            android:layout_alignTop="@+id/totalview"
            android:layout_centerHorizontal="true" />

        <TextView
            android:fontFamily="@string/fontFamily__roboto_medium"
            android:id="@+id/textView12"
            android:textColor="#CCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SPENT"
            android:textSize="15dp"
            android:padding="3dp"
            android:layout_below="@+id/textView11"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11" />

    </RelativeLayout>

    <include layout="@layout/myfab" />
</FrameLayout>
